--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,4 @@
 
-.container-fluid{
-    padding: 50px 0px 0px 0px;
-}
-
 /* font for the system */
 head, body{
     font-family: 'Verdana', serif;
@@ -30,10 +26,7 @@ th, label, .panel-title, .panel-footer, .modal-title, .search{
 }
 
 /* irrelevant styling */
-body p {
-  max-width: 400px;
-  margin: 20px auto;
-}
+
 #tallModal .modal-body p {
     margin-bottom: 900px
 }
@@ -59,9 +52,9 @@ body p {
     }
 
     /* mouse over link */
-    a:hover {
+/*    a:hover {
         color: #FF00FF;
-    }
+    }*/
 
     /* selected link */
     a:active {
@@ -342,3 +335,40 @@ margin: 0px auto 15px;
 }
 .video-section .buttonBar{display:none;}
 .player {font-size: 1px;}
+
+/*button style
+.btn.outline {
+    background: none;
+    padding: 12px 22px;
+}
+
+.btn-primary.outline {
+    border: 2px solid #0099cc;
+    color: #0099cc;
+}
+
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+    color: #33a6cc;
+    border-color: #33a6cc;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+    border-color: #007299;
+    color: #007299;
+    box-shadow: none;
+}
+
+.btn-success.outline {
+    border: 4px solid green;
+    color: green;
+}
+
+.btn-success.outline:hover, .btn-success.outline:focus, .btn-success.outline:active, .btn-success.outline.active, .open > .dropdown-toggle.btn-success {
+    color: green;
+    border-color: green;
+}
+.btn-success.outline:active, .btn-success.outline.active {
+    border-color: green;
+    color: green;
+    box-shadow: none;
+}
+*/
