--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -335,3 +335,9 @@ margin: 0px auto 15px;
 }
 .video-section .buttonBar{display:none;}
 .player {font-size: 1px;}
+
+/*carousel client height*/
+.carousel-inner{
+  width:100%;
+  max-height: 500px !important;
+}
