person edit tally with trans index

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -1,377 +1,1 @@
-/* font for the system */
-
-head,
-body {
-  font-family: 'Verdana', serif;
-  font-size: 14px;
-}
-
-/* font for title part of system */
-
-th,
-label,
-.panel-title,
-.panel-footer,
-.modal-title,
-.search {
-  font-family: 'Tahoma', serif;
-  font-size: 16px;
-}
-
-/* panel padding problem */
-
-.panel-heading,
-.panel-footer {
-  overflow: hidden;
-}
-
-/* modal size */
-
-.modal.modal-wide .modal-dialog {
-  width: 60%;
-  height: 80%;
-}
-
-.modal-wide .modal-body {
-  overflow-y: auto;
-}
-
-/* irrelevant styling */
-
-#tallModal .modal-body p {
-  margin-bottom: 900px;
-}
-
-.help-inline {
-  font-weight: bold;
-  color: red;
-}
-
-/* title hyperlink style */
-
-.title_hyper {
-  padding: 0px 0px 0px 15px;
-  /* visited link */
-  /* mouse over link */
-  /* selected link */
-}
-
-.title_hyper a:link {
-  color: #FF0000;
-}
-
-.title_hyper a:visited {
-  color: #00FF00;
-}
-
-.title_hyper a:hover {
-  color: #FF00FF;
-}
-
-.title_hyper a:active {
-  color: #0000FF;
-}
-
-.totalnum {
-  padding-top: 30px;
-}
-
-.display_num {
-  padding-top: 10px;
-}
-
-/* Top Navigation */
-
-.top-nav {
-  padding: 0 15px;
-}
-
-.top-nav > li {
-  display: inline-block;
-  float: left;
-}
-
-.top-nav > li > a {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  line-height: 20px;
-  color: #999;
-}
-
-.top-nav > li > a:hover,
-.top-nav > li > a:focus,
-.top-nav > .open > a,
-.top-nav > .open > a:hover,
-.top-nav > .open > a:focus {
-  color: #fff;
-  background-color: #000;
-}
-
-.top-nav > .open > .dropdown-menu {
-  float: left;
-  position: absolute;
-  margin-top: 0;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  background-color: #fff;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-}
-
-.top-nav > .open > .dropdown-menu > li > a {
-  white-space: normal;
-}
-
-.navbar-right {
-  padding-right: 15px;
-}
-
-ul.message-dropdown {
-  padding: 0;
-  max-height: 250px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-li.message-preview {
-  width: 275px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-}
-
-li.message-preview > a {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-li.message-footer {
-  margin: 5px 0;
-}
-
-ul.alert-dropdown {
-  width: 200px;
-}
-
-/* Side Navigation */
-
-@media (min-width: 1281px) {
-  .side-nav {
-    position: fixed;
-    top: 51px;
-    left: 225px;
-    width: 215px;
-    margin-left: -225px;
-    border: none;
-    border-radius: 0;
-    overflow-y: auto;
-    background-color: #2d2d2d;
-    bottom: 0;
-    overflow-x: hidden;
-    padding-bottom: 40px;
-  }
-
-  .side-nav > li > a {
-    width: 215px;
-  }
-
-  .side-nav li a:hover,
-  .side-nav li a:focus {
-    outline: none;
-    background-color: #000 !important;
-  }
-}
-
-.side-nav > li > ul {
-  padding: 0;
-}
-
-.side-nav > li > ul > li > a {
-  display: block;
-  padding: 10px 15px 10px 38px;
-  text-decoration: none;
-  color: #999;
-}
-
-.side-nav > li > ul > li > a:hover {
-  color: #fff;
-}
-
-label {
-  text-align: left;
-  padding-top: 5px;
-}
-
-.create_edit {
-  padding-top: 20px;
-}
-
-.form_button_left {
-  padding: 30px 0px 0px 190px;
-}
-
-.form_button_right {
-  padding: 30px 190px 0px 0px;
-}
-
-.datetimepicker {
-  position: relative;
-}
-
-.select2-container {
-  width: 100% !important;
-  padding: 0;
-}
-
-.thin-border {
-  border: thin solid black;
-}
-
-.thick-border {
-  border: thick solid black;
-}
-
-.thick-border-blue {
-  border: thick solid blue;
-}
-
-@media all and (max-width: 1200px) {
-  /* screen size until 1200px */
-
-  body {
-    font-size: 1.5em;
-    /* 1.5x default size */
-  }
-}
-
-@media all and (max-width: 1000px) {
-  /* screen size until 1000px */
-
-  body {
-    font-size: 1.2em;
-    /* 1.2x default size */
-  }
-}
-
-@media all and (max-width: 500px) {
-  /* screen size until 500px */
-
-  body {
-    font-size: 0.8em;
-    /* 0.8x default size */
-  }
-}
-
-.bgimage {
-  background-image: url(../../img/main1.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
-}
-
-.bgimage-inside {
-  padding-top: 37.36%;
-}
-
-.product-name {
-  height: 2.500em;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  font-size: 115%;
-}
-
-.product-desc {
-  height: 3.125em;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  margin: 0 0 2px 0;
-  color: #95a5a6;
-}
-
-.product-img-box {
-  height: 13.4em;
-  max-height: 13.4em;
-  overflow: hidden;
-}
-
-.product-img-box > img {
-  height: 12.7em;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.img-center {
-  display: block;
-  margin: 0 auto;
-}
-
-/*background image wrapper*/
-
-.wrapper {
-  width: 100%;
-  padding-top: 25px;
-}
-
-.img-back {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-#text {
-  z-index: 100;
-  position: absolute;
-  color: white;
-  font-size: 100px;
-  font-weight: bold;
-  left: 150px;
-  top: 350px;
-}
-
-/*vending machine video playback*/
-
-.video-section .pattern-overlay {
-  background-color: rgba(71, 71, 71, 0.59);
-  padding: 110px 0 32px;
-  min-height: 496px;
-  /* Incase of overlay problems just increase the min-height*/
-}
-
-.video-section h1,
-.video-section h3 {
-  text-align: center;
-  color: #fff;
-}
-
-.video-section h1 {
-  font-size: 110px;
-  font-family: 'Buenard', serif;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 40px auto 0px;
-  text-shadow: 1px 1px 1px #000;
-  -webkit-text-shadow: 1px 1px 1px #000;
-  -moz-text-shadow: 1px 1px 1px #000;
-}
-
-.video-section h3 {
-  font-size: 25px;
-  font-weight: lighter;
-  margin: 0px auto 15px;
-}
-
-.video-section .buttonBar {
-  display: none;
-}
-
-.player {
-  font-size: 1px;
-}
-
-/*carousel client height*/
-
-.carousel-inner {
-  width: 100%;
-  max-height: 500px !important;
-}
+.product-desc,.product-name{text-overflow:ellipsis;-o-text-overflow:ellipsis}.bgimage,.img-back{background-repeat:no-repeat}body,head{font-family:Verdana,serif;font-size:14px}.modal-title,.panel-footer,.panel-title,.search,label,th{font-family:Tahoma,serif;font-size:16px}.panel-footer,.panel-heading{overflow:hidden}.modal.modal-wide .modal-dialog{width:60%;height:80%}.modal-wide .modal-body{overflow-y:auto}#tallModal .modal-body p{margin-bottom:900px}.help-inline{font-weight:700;color:red}.title_hyper{padding:0 0 0 15px}.title_hyper a:link{color:red}.title_hyper a:visited{color:#0F0}.title_hyper a:hover{color:#F0F}.title_hyper a:active{color:#00F}.totalnum{padding-top:30px}.display_num{padding-top:10px}.top-nav{padding:0 15px}.top-nav>li{display:inline-block;float:left}.top-nav>li>a{padding-top:15px;padding-bottom:15px;line-height:20px;color:#999}.top-nav>.open>a,.top-nav>.open>a:focus,.top-nav>.open>a:hover,.top-nav>li>a:focus,.top-nav>li>a:hover{color:#fff;background-color:#000}.top-nav>.open>.dropdown-menu{float:left;position:absolute;margin-top:0;border:1px solid rgba(0,0,0,.15);border-top-left-radius:0;border-top-right-radius:0;background-color:#fff;box-shadow:0 6px 12px rgba(0,0,0,.175)}.top-nav>.open>.dropdown-menu>li>a{white-space:normal}.navbar-right{padding-right:15px}ul.message-dropdown{padding:0;max-height:250px;overflow-x:hidden;overflow-y:auto}li.message-preview{width:275px;border-bottom:1px solid rgba(0,0,0,.15)}li.message-preview>a{padding-top:15px;padding-bottom:15px}li.message-footer{margin:5px 0}ul.alert-dropdown{width:200px}@media (min-width:1281px){.side-nav,.side-nav>li>a{width:215px}.side-nav{position:fixed;top:51px;left:225px;margin-left:-225px;border:none;border-radius:0;overflow-y:auto;background-color:#2d2d2d;bottom:0;overflow-x:hidden;padding-bottom:40px}.side-nav li a:focus,.side-nav li a:hover{outline:0;background-color:#000!important}}.side-nav>li>ul{padding:0}.side-nav>li>ul>li>a{display:block;padding:10px 15px 10px 38px;text-decoration:none;color:#999}.side-nav>li>ul>li>a:hover{color:#fff}label{text-align:left;padding-top:5px}.create_edit{padding-top:20px}.form_button_left{padding:30px 0 0 190px}.form_button_right{padding:30px 190px 0 0}.datetimepicker{position:relative}.select2-container{width:100%!important;padding:0}.thin-border{border:thin solid #000}.thick-border{border:thick solid #000}.thick-border-blue{border:thick solid #00f}@media all and (max-width:1200px){body{font-size:1.5em}}@media all and (max-width:1000px){body{font-size:1.2em}}@media all and (max-width:500px){body{font-size:.8em}}.bgimage{background-image:url(../../img/main1.jpg);background-size:100%}.bgimage-inside{padding-top:37.36%}.product-name{height:2.5em;overflow:hidden;font-size:115%}.product-desc{height:3.125em;overflow:hidden;margin:0 0 2px;color:#95a5a6}.product-img-box{height:13.4em;max-height:13.4em;overflow:hidden}.product-img-box>img{height:12.7em;overflow:hidden;cursor:pointer}.img-center{display:block;margin:0 auto}.wrapper{width:100%;padding-top:25px}.img-back{background-position:center;background-size:cover;width:100%;height:100%}#text{z-index:100;position:absolute;color:#fff;font-size:100px;font-weight:700;left:150px;top:350px}.video-section .pattern-overlay{background-color:rgba(71,71,71,.59);padding:110px 0 32px;min-height:496px}.video-section h1,.video-section h3{text-align:center;color:#fff}.video-section h1{font-size:110px;font-family:Buenard,serif;font-weight:700;text-transform:uppercase;margin:40px auto 0;text-shadow:1px 1px 1px #000;-webkit-text-shadow:1px 1px 1px #000;-moz-text-shadow:1px 1px 1px #000}.video-section h3{font-size:25px;font-weight:lighter;margin:0 auto 15px}.video-section .buttonBar{display:none}.player{font-size:1px}.carousel-inner{width:100%;max-height:500px!important}
