--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -72,46 +72,6 @@ th, label, .panel-title, .panel-footer, .modal-title, .search{
 
 /* Top Navigation */
 
-.top-nav {
-    padding: 0 15px;
-}
-
-.top-nav>li {
-    display: inline-block;
-    float: left;
-}
-
-.top-nav>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    line-height: 20px;
-    color: #999;
-}
-
-.top-nav>li>a:hover,
-.top-nav>li>a:focus,
-.top-nav>.open>a,
-.top-nav>.open>a:hover,
-.top-nav>.open>a:focus {
-    color: #fff;
-    background-color: #000;
-}
-
-.top-nav>.open>.dropdown-menu {
-    float: left;
-    position: absolute;
-    margin-top: 0;
-    border: 1px solid rgba(0,0,0,.15);
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    background-color: #fff;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
-}
-
-.top-nav>.open>.dropdown-menu>li>a {
-    white-space: normal;
-}
 
 .navbar-right{
     padding-right: 15px;
@@ -148,20 +108,20 @@ ul.alert-dropdown {
     .side-nav {
         position: fixed;
         top: 51px;
-        left: 225px;
-        width: 215px;
-        margin-left: -225px;
+        left: 170px;
+        width: 170px;
+        margin-left: -170px;
         border: none;
         border-radius: 0;
         overflow-y: auto;
         background-color: #2d2d2d;
         bottom: 0;
         overflow-x: hidden;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
     }
 
     .side-nav>li>a {
-        width: 215px;
+        width: 170px;
     }
 
     .side-nav li a:hover,
@@ -169,6 +129,15 @@ ul.alert-dropdown {
         outline: none;
         background-color: #000 !important;
     }
+
+    /*shift content to right and bottom*/
+    body{
+        padding-left: 170px;
+    }
+}
+
+body{
+    padding-top: 45px;
 }
 
 .side-nav>li>ul {
@@ -177,7 +146,7 @@ ul.alert-dropdown {
 
 .side-nav>li>ul>li>a {
     display: block;
-    padding: 10px 15px 10px 38px;
+    padding: 10px 15px 0px 38px;
     text-decoration: none;
     color: #999;
 }
@@ -341,3 +310,11 @@ margin: 0px auto 15px;
   width:100%;
   max-height: 500px !important;
 }
+
+/*search form index alignment*/
+.search-title{
+    padding: 0px 0px;
+    margin: 0px 0px;
+}
+
+
