--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -302,4 +302,8 @@ margin: 0px auto 15px;
     margin: 0px 0px;
 }
 
+.dropdown{
+    position: absolute;
+    z-index : 999; //some high value
+}
 
