trans & dailyrpt table amendment

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -303,3 +303,9 @@ margin: 0px auto 15px;
     margin: 0px 0px;
 }
 
+._720kb-datepicker-calendar{
+    /*margin-left: -0.5%;*/
+    margin-left:-100%;
+    /*width:101%;*/
+    width:200px;
+}
