--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -309,3 +309,15 @@ margin: 0px auto 15px;
     /*width:101%;*/
     width:200px;
 }
+
+/*file button styling*/
+/*input[type="file"] {
+    display: none;
+}
+
+.custom_file {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}*/
