zindex for datepicker

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -305,9 +305,10 @@ margin: 0px auto 15px;
 
 ._720kb-datepicker-calendar{
     /*margin-left: -0.5%;*/
-    margin-left:-100%;
+    margin-left:-90%;
     /*width:101%;*/
     width:200px;
+    z-index: 9999;
 }
 
 /*file button styling*/
