--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -311,14 +311,8 @@ margin: 0px auto 15px;
     z-index: 9999;
 }
 
-/*file button styling*/
-/*input[type="file"] {
-    display: none;
+td.long_data {
+    max-width: 0;
+    max-height: 0;
+    overflow-y: auto;
 }
-
-.custom_file {
-    border: 1px solid #ccc;
-    display: inline-block;
-    padding: 6px 12px;
-    cursor: pointer;
-}*/
