--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -181,15 +181,15 @@ label{
 
 //font size responsive
 @media all and (max-width: 1200px) { /* screen size until 1200px */
-    body, label, div label {
-        font-size: 1.8em; /* 1.5x default size */
+    body {
+        font-size: 1.6em; /* 1.5x default size */
     }
     h1 {
         font-size: 1.9em;
     }
 }
 @media all and (max-width: 1000px) { /* screen size until 1000px */
-    body, label, div label {
+    body {
         font-size: 1.5em; /* 1.2x default size */
         }
     h1 {
@@ -197,7 +197,7 @@ label{
     }
 }
 @media all and (max-width: 500px) { /* screen size until 500px */
-    body, label, div label {
+    body {
         font-size: 1.1em; /* 0.8x default size */
         }
     h1 {
