isvending and report tuning

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -205,11 +205,10 @@ label{
     }
 
     ._720kb-datepicker-calendar{
-       margin-left: -0.5%;
-        /*margin-left:-50%;*/
-        width:101%;
-        width:200px;
-        position: absolute;
+       /*margin-left: -0.5%;*/
+        /*width:101%;*/
+        /*width:200px;*/
+        /*position: absolute;*/
         z-index: 9999;
     }
 }
