--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -112,10 +112,10 @@ ul.alert-dropdown {
         margin-left: -170px;
         border: none;
         border-radius: 0;
-        overflow-y: auto;
+        overflow-y: visible;
         background-color: #2d2d2d;
         bottom: 0;
-        overflow-x: hidden;
+        overflow-x: visible;
         padding-bottom: 20px;
     }
 
