--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -350,3 +350,11 @@ table input.form-control {
      /*border is optional*/
      cursor: pointer;
 }
+
+.redback {
+    background-color: red;
+}
+
+.yellowback {
+    background-color: yellow;
+}
