--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -351,10 +351,10 @@ table input.form-control {
      cursor: pointer;
 }
 
-.redback {
+.Red {
     background-color: red;
 }
 
-.yellowback {
+.Yellow {
     background-color: yellow;
 }
