operation worksheet js

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -358,3 +358,11 @@ table input.form-control {
 .Yellow {
     background-color: yellow;
 }
+
+.Lightpurple {
+    background-color: #cd72f6;
+}
+
+.td_edit {
+    cursor: pointer;
+}
