daniel bom and kent serial

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -435,4 +435,11 @@ table.table-fixedheader>thead>tr>th, table.table-fixedheader>tbody>tr>td {
   height: 600px;
 }
 
-
+.table-borderless > tbody > tr > td,
+.table-borderless > tbody > tr > th,
+.table-borderless > tfoot > tr > td,
+.table-borderless > tfoot > tr > th,
+.table-borderless > thead > tr > td,
+.table-borderless > thead > tr > th {
+    border: none;
+}
