--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -197,13 +197,13 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/mainslide.jpg);
+    /* background-image: url(../img/mainslide.jpg); */
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    padding: 150px 20px 10px 20px;
+    padding: 5px 5px 0px 5px;
 }
 
 header .header-content {
