--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -112,7 +112,7 @@ ul.alert-dropdown {
         margin-left: -170px;
         border: none;
         border-radius: 0;
-        overflow-y: visible;
+        overflow-y: scroll;
         background-color: #2d2d2d;
         bottom: 0;
         overflow-x: visible;
